--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "debounce": "^2.1.1",
+    "dotenv": "^16.4.5", 
+    "lodash": "^4.17.21",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
