--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "debounce": "^2.1.1",
-    "dotenv": "^16.4.5", 
+    "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
     "process": "^0.11.10",
     "react": "^18.3.1",
