--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "debounce": "^2.1.1",
@@ -19,6 +20,7 @@
     "rc-virtual-list": "^3.14.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "sass": "^1.78.0"
   },
