--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debounce": "^2.1.1",
     "dotenv": "^16.4.5",
     "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "process": "^0.11.10",
     "rc-virtual-list": "^3.14.5",
     "react": "^18.3.1",
